--- a/Admin Side/Items/Edit Items.resx
+++ b/Admin Side/Items/Edit Items.resx
@@ -162,21 +162,33 @@
   </data>
   <data name="itemDescTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAnUAAAA9CAYAAADLY598AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJiSURBVHhe7dmhbhRRAIXhkZWVSCQS2UdAIpHISmRTdrM1
-        CCQGiayoQIKjye4QCAmpQDRNtx2akjQtgcqSNM2yd3sbQhr8cPJ9yRFzZx7gz50GAIBA3fvRvWk7eHww
-        GW6YmZmZWb82bYer3WR9pabbbd32aPmwHb6db2ZmZmZm/d488HbKZVxNuT/mLxdB9/Xjs9np7ubs59E7
-        MzMzM+vZzva2ZkefntewG+x226OlmnNN07Xr92+C7vLX+QwAgP66uryYfdt5uQi7/fHgYU26pplOhk/K
-        4ff91/VTAAD67Px4fPMbdqMmXdOUh3JYrvQAAOi/0m2iDgDgPyfqAAACiDoAgACiDgAggKgDAAgg6gAA
-        Aog6AIAAog4AIICoAwAIIOoAAAKIOgCAAKIOACCAqAMACCDqAAACiDoAgACiDgAggKgDAAgg6gAAAog6
-        AIAAog4AIICoAwAIIOoAAAKIOgCAAKIOACCAqAMACCDqAAACiDoAgACiDgAggKgDAAgg6gAAAog6AIAA
-        og4AIICoAwAIIOoAAAKIOgCAAKIOACCAqAMACCDqAAACiDoAgACiDgAggKgDAAgg6gAAAog6AIAAog4A
-        IICoAwAIIOoAAAKIOgCAAKIOACDAv6JurRz+OHxTPwMAoM/Oj8e3o25//PRBOTz+/KJ+BgBAn53ubi6i
-        btoOV2vSNU23PVo6aAcn5cXJl1eL6zwzMzMz69/KDd3Z3tb1LV07uJh33J2adNe6yfrKTdiZmZmZWb9X
-        gm46HjyqKfe3eektlyu88m/WzMzMzHq7te7D6G5NOAAAMjTNb4CNcE/5bm1DAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAYgAAAA9CAYAAAC3M/5UAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAISSURBVHhe7dihbxNxGMfhk5OTSCQSuT8BiUQiJ5FLuUtn
+        EEgMEjkxgQTHkvYIhIRMIJql3Y6lJMtGoHIky3Lcr/s1hPRdguaeJ/mKXs9/8l4BAP+keT+8N6vLx8fj
+        atfMzP7/zepquxkPtnIG1jUHw82TunrbrTUzs/6ti8VhOhJyFv7o/lzG4evHZ+35ZK/9efrOzMx6sIuj
+        /fb00/MciXLSHQwbOQ3d9VAP7q/icPVr0QLQL9dXl+23w5fLSExH5cOch6KYjasn6eH36ev8KgB9s5iP
+        Vp+adnMeiiL9SA/TqQFAP6UGCAQAawQCgJBAABASCABCAgFASCAACAkEACGBACAkEACEBAKAkEAAEBII
+        AEICAUBIIAAICQQAIYEAICQQAIQEAoCQQAAQEggAQgIBQEggAAgJBAAhgQAgJBAAhAQCgJBAABASCABC
+        AgFASCAACAkEACGBACAkEACEBAKAkEAAEBIIAEICAUBIIAAICQQAIYEAICQQAIQEAoCQQAAQEggAQgIB
+        QEggAAgJBAAhgQAgdFsgdtLDHydv8msA9M1iPloPxHT09EF6OP/8Ir8GQN+cT/aWgZjV1XbOQ1E0B8ON
+        47o8S3+cfXm1PDPMzKwfS5fDxdH+zfVQl5ddE+7kPNxoxoOtVSTMzKx/S3GYjcpHOQt/66qxmU6L9P3J
+        zMx6tZ3mw/BuzgEA3KYofgMobraiGhNPswAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="itemNameTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="totalValueTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
