--- a/Admin Side/Users/New Staff.resx
+++ b/Admin Side/Users/New Staff.resx
@@ -117,10 +117,47 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="ID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="username.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="passwordTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAAAlCAYAAAAHgqbCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGLSURBVHhe7d0hT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6SrgRCQiYQC2m3soxkAQKTI1lI6SmnIQR2EvR9n+QT62rf3KrWAfiH/DJazpJgs98J24z5
+        siwJt/JOa1Uz+C2/iBYGSXhWrmDM15WxdOWQ0Cy+lX9WcTxc7xZPvaPibXjOmDd7vj8uhjd7GknQKw+M
+        hqZRnh5Ja6WOY/Y+KQAffcymxWP3oIokjYN1zcO5rBNuy8WX9ERvBfw0GcX1o1Zb83BOfshFOWoAn0kD
+        BALMQSCAgUAAA4EABgIBDAQCGAgEMBAIYCAQwEAggIFAAAOBAAYCAQwEAhgIBDAQCGAgEMBAIICBQAAD
+        gQAGAgEMBAIYCAQwEAhgmBdIUy6+Dk71NsBPf75ZMY131uTi6HZfbwP8JC9ulxbkcwiaR/Xpg0Y/Ccby
+        x/jusDpmGPNpcnLIG96r0yMJpmUTi5rHF/l4SB0JY75O4sjiYEOz+Ek+oiNHizx/MebhmvlVtKQ5ALA5
+        9wl5K+dovgAoWAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="itemNameTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAAAlCAYAAAAHgqbCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGLSURBVHhe7d0hT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6SrgRCQiYQC2m3soxkAQKTI1lI6SmnIQR2EvR9n+QT62rf3KrWAfiH/DJazpJgs98J24z5
+        siwJt/JOa1Uz+C2/iBYGSXhWrmDM15WxdOWQ0Cy+lX9WcTxc7xZPvaPibXjOmDd7vj8uhjd7GknQKw+M
+        hqZRnh5Ja6WOY/Y+KQAffcymxWP3oIokjYN1zcO5rBNuy8WX9ERvBfw0GcX1o1Zb83BOfshFOWoAn0kD
+        BALMQSCAgUAAA4EABgIBDAQCGAgEMBAIYCAQwEAggIFAAAOBAAYCAQwEAhgIBDAQCGAgEMBAIICBQAAD
+        gQAGAgEMBAIYCAQwEAhgmBdIUy6+Dk71NsBPf75ZMY131uTi6HZfbwP8JC9ulxbkcwiaR/Xpg0Y/Ccby
+        x/jusDpmGPNpcnLIG96r0yMJpmUTi5rHF/l4SB0JY75O4sjiYEOz+Ek+oiNHizx/MebhmvlVtKQ5ALA5
+        9wl5K+dovgAoWAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="itemIDTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAAAlCAYAAAAHgqbCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGLSURBVHhe7d0hT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6SrgRCQiYQC2m3soxkAQKTI1lI6SmnIQR2EvR9n+QT62rf3KrWAfiH/DJazpJgs98J24z5
+        siwJt/JOa1Uz+C2/iBYGSXhWrmDM15WxdOWQ0Cy+lX9WcTxc7xZPvaPibXjOmDd7vj8uhjd7GknQKw+M
+        hqZRnh5Ja6WOY/Y+KQAffcymxWP3oIokjYN1zcO5rBNuy8WX9ERvBfw0GcX1o1Zb83BOfshFOWoAn0kD
+        BALMQSCAgUAAA4EABgIBDAQCGAgEMBAIYCAQwEAggIFAAAOBAAYCAQwEAhgIBDAQCGAgEMBAIICBQAAD
+        gQAGAgEMBAIYCAQwEAhgmBdIUy6+Dk71NsBPf75ZMY131uTi6HZfbwP8JC9ulxbkcwiaR/Xpg0Y/Ccby
+        x/jusDpmGPNpcnLIG96r0yMJpmUTi5rHF/l4SB0JY75O4sjiYEOz+Ek+oiNHizx/MebhmvlVtKQ5ALA5
+        9wl5K+dovgAoWAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="gunaElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
 </root>
