--- a/Admin Side/Stocks/Add Stock.resx
+++ b/Admin Side/Stocks/Add Stock.resx
@@ -118,57 +118,75 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="searchCategoryTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="dateAddedTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAARoAAAAjCAYAAABLscVrAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANISURBVHhe7d29T1NRHMbxOzI6Ojo6Ojo6OhkXE0dH419g
-        gMqL0PKWaDTRRAd1cDAmziQaSOj7DQpRgxHh3l4bKAKlVHmveO0Dx2DlxdLegcD3k5yhueUynSe/+7vn
-        nFoAcOS40cbzk9FQq5eOJL1UZMRN3p5zYiGfwWAcz6E5rrmuobn/ZajpoomDYLmDLae8VPiRm2gvZt/e
-        Lyx4A/7ywri/uuj4pbWCD+D40hzXXNfQ3J9+/7jgxG+VvHT4pZtsOWNioj5uorMrk+osLGRjpZ/rP8y/
-        BnCS/dos+d+/vfO9dHdhqwgZbGkwkXE4W1VMujudz7xe3SytmtsDwA4FjoqQTLprvJwZp018VEfl0Fe7
-        99NS/vO6uR8A7Gt9adr37N6cG2s8Z2LkYKpkFDL6QwCollornt03W1XfRo9LVDIAarGxMlcOmx5HBYuJ
-        lN28VPhe3hugIQOgZsWZ0Q3P7u43sVJJjZxMOlxUcwcA6vF1+M7inv0avaJS99h8DwBqtjQ/5nvpyICJ
-        l23laqbBTbZ/5zU2gKC4yY7lilfeWlKs1X7mOgDUbW781fJELHTdxIxlZRLtDxanEuYyANRv1+OTNkhq
-        7xIABEWvusuPT1MmZrQSOOywQA9AkNTzdeKtKyZmLEsfaAQDCJqOmTAxUw6a8gcACFpl0MRvlVioByBo
-        FUGjho0aNwAQFBUvKmJMzGhVcGREp2cBQFB0Mp+OATUxY1mZZOezYs42lwGgfloyo6UzJmYsayLWfG32
-        8wvO6QQQmHzmTcmJt3WYmNk+7MpNtK2Z6wBQtz13cGupsJYMA0C9tABYC4FNvOxQ8iiBzPcAoGa5j08X
-        vww1XzbxUomqBkC99q1m/tDZEZ7d5/GjcABqoa1M5SejGTfectbEyt70COUN351npTCAw8p9eJJ3Eh1X
-        TJwczEmGLyls+GVKANVQJaOQce3uGyZGqrNV2di9OVYMAziIejJ6XKq6kvnXVs8mFRmZGn1Y4LwaAH9T
-        L3dm7HlRjd//9mSq4UabLuhmnt1TzLv9JVU59HCAk0dzv5Ad8rNv7xe0j2liqPmqiYngKLUmo6GbqnK0
-        K1NbwBkMxskZmvtuorXXjTaeN7EAAEeBZf0G+/zc+raiUXYAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="Column8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
+  <data name="itemPriceTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="itemIDTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="itemQuantityTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="itemTotalTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="gunaElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>25, 37</value>
   </metadata>
-  <metadata name="Stock_ID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Item_ID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Stock_In.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Stock_Out.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Unit_Type.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Weight_Unit.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Date_Added.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Item_Price.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Item_Total.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
+  <metadata name="gunaDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>142, 37</value>
   </metadata>
 </root>
