--- a/Admin Side/Category/New Category.resx
+++ b/Admin Side/Category/New Category.resx
@@ -162,4 +162,7 @@
         LrkEAUVB8AkUMB2SlrDhmgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="gunaDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>134, 17</value>
+  </metadata>
 </root>
